Write more tests for Board class

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.vincentcarrier.omego.boardview.ZoomView
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.vincentcarrier.omego.MainActivity"
     >
 
-  <com.vincentcarrier.omego.boardview.BoardView
-      android:id="@+id/boardView"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      />
 
-</com.vincentcarrier.omego.boardview.ZoomView>
+  <fragment
+      android:id="@+id/board_fragment"
+      android:name="com.vincentcarrier.omego.BoardFragment"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      tools:layout="@layout/fragment_board"
+      />
+</android.support.constraint.ConstraintLayout>
