--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -10,8 +10,8 @@
 
   <com.vincentcarrier.omego.boardview.BoardView
       android:id="@+id/boardView"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
       />
 
 </FrameLayout>
