--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/zoomView"
     tools:context="com.vincentcarrier.omego.MainActivity"
     >
 
-  <com.vincentcarrier.omego.boardview.BoardView
+  <com.vincentcarrier.omego.board.BoardView
       android:id="@+id/boardView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
