Fix stuttering when zooming or panning

--- a/app/src/main/res/layout/fragment_new_game.xml
+++ b/app/src/main/res/layout/fragment_new_game.xml
@@ -55,7 +55,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="64dp"
-      android:text="New Game"
+      android:text="@string/new_game"
       android:textAlignment="center"
       android:textSize="36sp"
       app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +68,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="36dp"
-      android:text="Start Game"
+      android:text="@string/start_game"
       android:textSize="24sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
