--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
   <fragment
       android:tag="MAIN"
       android:id="@+id/main_fragment"
-      android:name="com.vincentcarrier.omego.board.BoardFragment"
+      android:name="com.vincentcarrier.omego.newgame.NewGameFragment"
       android:layout_width="0dp"
       android:layout_height="0dp"
       app:layout_constraintBottom_toBottomOf="parent"
