--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-  <fragment
-      android:id="@+id/main_fragment"
-      android:name="com.vincentcarrier.omego.newgame.NewGameFragment"
+  <FrameLayout
+      android:id="@+id/fragment_container"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       tools:layout="@layout/fragment_new_game"
